--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= blog.title %></title>
+    <title>
+        <%= locals.title %>
+    </title>
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>Bootstrap 101 Template</title>
 
+    <!-- Normalize -->
+    <link href="css/normalize.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,8 +22,5 @@
       <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-  <%- include('components/nav') %>
-  <%- include('components/nav-setting') %>
-  <%- include('components/notification') %>    
+</head>
+<body>  
