--- a/views/components/nav.ejs
+++ b/views/components/nav.ejs
@@ -117,7 +117,9 @@
                         <!-- 登录终止 -->
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                            <button type="button" class="btn btn-primary">退出</button>
+                            <a href="/signout">
+                                <button type="submit" class="btn btn-primary" >退出</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -197,14 +199,14 @@
                         </div>
                         <div class="modal-body">
                             <!-- 登录 -->
-                            <form action="/" method="POST" id="signin_form">
+                            <form action="/signin" method="POST" id="signin_form">
                                 <div class="form-group">
-                                    <label for="email">邮1箱</label>
-                                    <input type="email" class="form-control" id="email" placeholder="填写注册时使用的邮箱">
+                                    <label for="email">邮箱</label>
+                                    <input type="email" class="form-control" id="email" placeholder="填写注册时使用的邮箱" name="email">
                                 </div>
                                 <div class="form-group">
                                     <label for="password">密码</label>
-                                    <input type="password" class="form-control" id="password" placeholder="填写你的登录密码">
+                                    <input type="password" class="form-control" id="password" placeholder="填写你的登录密码" name="password">
                                 </div>
 
                                 <!-- <div class="form-group">
