登录时由邮箱账号改为用户名

--- a/views/components/nav.ejs
+++ b/views/components/nav.ejs
@@ -201,8 +201,8 @@
                             <!-- 登录 -->
                             <form action="/signin" method="POST" id="signin_form">
                                 <div class="form-group">
-                                    <label for="email">邮箱</label>
-                                    <input type="email" class="form-control" id="email" placeholder="填写注册时使用的邮箱" name="email">
+                                    <label for="username">用户名</label>
+                                    <input type="text" class="form-control" id="username" placeholder="填写注册时使用的用户名" name="username">
                                 </div>
                                 <div class="form-group">
                                     <label for="password">密码</label>
