删除then()中的err参数；添加了summary页面；将mongoose的定义生命提到更前面，但是还有待改进

--- a/views/components/article-content.ejs
+++ b/views/components/article-content.ejs
@@ -4,7 +4,7 @@
         <div class="media">
             <div class="media-left">
                 <a href="#">
-                    <img class="media-object" src="./img/64.png" alt="...">
+                    <img class="media-object" src="/img/64.png" alt="...">
                 </a>
             </div>
 
