--- a/views/components/article-message.ejs
+++ b/views/components/article-message.ejs
@@ -9,7 +9,7 @@
             <div class="panel-body">
                 <div class="media">
                     <div class="media-left">
-                         <input type="image" src="./img/64.png" /> 
+                         <input type="image" src="/img/64.png" /> 
                     </div>
                     <div class="media-body">
                         <textarea class="form-control" id="summary" rows="4" placeholder="文章留言"></textarea>
@@ -19,7 +19,7 @@
                 <div class="media">
                     <div class="media-left">
                         <a href="#">
-                            <img class="media-object" src="./img/64.png" alt="...">
+                            <img class="media-object" src="/img/64.png" alt="...">
                         </a>
                     </div>
                     <div class="media-body">
@@ -38,7 +38,7 @@
                 <div class="media">
                     <div class="media-left">
                         <a href="#">
-                                  <img class="media-object" src="./img/64.png" alt="...">
+                                  <img class="media-object" src="/img/64.png" alt="...">
                                 </a>
                     </div>
                     <div class="media-body">
