完善发表文章后跳转到文章页

--- a/views/components/article-content.ejs
+++ b/views/components/article-content.ejs
@@ -9,10 +9,8 @@
             </div>
 
             <div class="media-body">
-                <h2 class="media-heading"><a href="#">Example page header</a></h2>
-                <p>打开电脑，去朗诵天地坐了会。听了几位朋友的朗诵，自我感觉还不错。便返回论坛，打算就我前几天刚开了个头的文稿接着写下去。谁知到论坛上一看，前几天我发在论坛上的小文《知青文学浅义》引起那么多朋友兴趣。不论是同龄人还是后来者居上的小朋友，大家都十分关心老三届的过去，关注知青文学的未来，真令我欣慰。激动之余，我也想就何坪先生过激的论调说说心里话，就算我对大家的感激之情吧！我们那一代人说是怪胎——杂种，我自已也认为这话并不过分，这是那个时代的必然产物。我们出身的时候虽然赶上了五星红旗飘扬，可成长的时候却经历了三年自然灾害带来的生活困难；上学求知的时候，又赶上了文化大革命的造反、批斗、抄家、武斗……后来的上山下乡；再后来的百万知青大返城、就业无着落；参加工作又赶上国民经济调整，工厂关门、企业倒闭、工人失业,下岗……这一切的一切，都让我们这一代人赶上了。</p>
-                <p>打开电脑，去朗诵天地坐了会。听了几位朋友的朗诵，自我感觉还不错。便返回论坛，打算就我前几天刚开了个头的文稿接着写下去。谁知到论坛上一看，前几天我发在论坛上的小文《知青文学浅义》引起那么多朋友兴趣。不论是同龄人还是后来者居上的小朋友，大家都十分关心老三届的过去，关注知青文学的未来，真令我欣慰。激动之余，我也想就何坪先生过激的论调说说心里话，就算我对大家的感激之情吧！我们那一代人说是怪胎——杂种，我自已也认为这话并不过分，这是那个时代的必然产物。我们出身的时候虽然赶上了五星红旗飘扬，可成长的时候却经历了三年自然灾害带来的生活困难；上学求知的时候，又赶上了文化大革命的造反、批斗、抄家、武斗……后来的上山下乡；再后来的百万知青大返城、就业无着落；参加工作又赶上国民经济调整，工厂关门、企业倒闭、工人失业,下岗……这一切的一切，都让我们这一代人赶上了。</p>
-                <p>打开电脑，去朗诵天地坐了会。听了几位朋友的朗诵，自我感觉还不错。便返回论坛，打算就我前几天刚开了个头的文稿接着写下去。谁知到论坛上一看，前几天我发在论坛上的小文《知青文学浅义》引起那么多朋友兴趣。不论是同龄人还是后来者居上的小朋友，大家都十分关心老三届的过去，关注知青文学的未来，真令我欣慰。激动之余，我也想就何坪先生过激的论调说说心里话，就算我对大家的感激之情吧！我们那一代人说是怪胎——杂种，我自已也认为这话并不过分，这是那个时代的必然产物。我们出身的时候虽然赶上了五星红旗飘扬，可成长的时候却经历了三年自然灾害带来的生活困难；上学求知的时候，又赶上了文化大革命的造反、批斗、抄家、武斗……后来的上山下乡；再后来的百万知青大返城、就业无着落；参加工作又赶上国民经济调整，工厂关门、企业倒闭、工人失业,下岗……这一切的一切，都让我们这一代人赶上了。</p>
+                <h2 class="media-heading"><a href="#"><%= res.title %></a></h2>
+                <p><%= res.content %></p>
                                 
             </div>
         </div>
