修复 article_summary

--- a/views/components/article-content.ejs
+++ b/views/components/article-content.ejs
@@ -4,14 +4,13 @@
         <div class="media">
             <div class="media-left">
                 <a href="#">
-                    <img class="media-object" src="/img/64.png" alt="...">
+                    <img class="media-object" src="/img/icon/" alt="...">
                 </a>
             </div>
 
             <div class="media-body">
                 <h2 class="media-heading"><a href="#"><%= res.title %></a></h2>
-                <p><%= res.content %></p>
-                                
+                <p><%= res.content %></p>                                
             </div>
         </div>
     </div>
