添加了点击头像跳转到个人文章集合页面，点击文章标题跳转到文章详情页

--- a/views/components/articlet-summary.ejs
+++ b/views/components/articlet-summary.ejs
@@ -4,13 +4,13 @@
     <div class="col-md-10">
         <div class="media">
             <div class="media-left">
-                <a href="#">
+                <a href="/article/author=<%= re.name %>">
                     <img style="width:64px;height:64px" class="media-object" src="/img/icon/<%= re.icon %>" alt="...">
                 </a>
             </div>
 
             <div class="media-body">
-                <h2 class="media-heading"><a href="#"><%= re.title %></a></h2>
+                <h2 class="media-heading"><a href="/article/id=<%= re._id %>"><%= re.title %></a></h2>
                 <p><%= re.summary %></p>
                 <p></p>
             </div>
