--- a/views/components/article-content.ejs
+++ b/views/components/article-content.ejs
@@ -3,7 +3,7 @@
     <div class="col-md-10">
         <div class="media">
             <div class="media-left">
-                <a href="#">
+                <a href="/article/author=<%= res.name %>">
                     <img style="width:64px;height:64px" class="media-object" src="/img/icon/<%= res.icon %>" alt="...">
                 </a>
             </div>
