--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,6 +1,10 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script> 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/js/bootstrap.min.js"></script>
+    <!-- ejs -->
+    <script src="/js/ejs_production.js"></script>
+    <!-- ajax -->
+     <script src="/js/ajax.js"></script> 
   </body>
 </html>
