--- a/views/components/article-content.ejs
+++ b/views/components/article-content.ejs
@@ -9,9 +9,9 @@
             </div>
 
             <div class="media-body">
-                <h2 class="media-heading"><%= res.title %></h2>
-                <p><%= res.summary %></p>
-                <p><%= res.content %></p>                                
+                <h1 class="media-heading"><%= res.title %></h1>
+                <p>摘要：<%= res.summary %></p>
+                <p><%- res.content %></p>                                
             </div>
         </div>
     </div>
